# skillsimm-template-submissions

./: CONTRIBUTING.md  GAPS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: gap-claim.yml
.github/workflows/: validate.yml
docs/: create.html  explore.html  format.html  index.html  jobs.html  report-template.md
docs/assets/: style.css
docs/data/jobs/: account_manager.json  index.json  (+10 more)
schemas/: creator.schema.json  grading_rule.schema.json  metadata.schema.json  step.schema.json  template.schema.json
scripts/: new_template.py  setup_gap_labels.sh  validate_package.py
scripts/template_package/: __init__.py  convert.py  schema.py  validator.py
template_docs/unit_economics_individual_AIassist/: unit_economics_individual_AIassist_template_doc.md
templates/consumer-complaint-escalation/: LICENSE.md  README.md  creator.yaml  expected_outputs.json  grading.yaml  metadata.yaml  sample_inputs.json  steps.yaml  template.yaml
templates/e2e_vendor_risk_triage/: LICENSE.md  README.md  creator.yaml  grading.yaml  metadata.yaml  steps.yaml  template.yaml
tools/ats-ingest/: README.md  pyproject.toml
tools/ats-ingest/src/ats_ingest/: __init__.py  boards.py  cli.py  filters.py  normalize.py  onet.py
tools/ats-ingest/src/ats_ingest/data/: job_boards.json  onet_anchors.json
tools/ats-ingest/src/ats_ingest/fetchers/: __init__.py  adzuna.py  ashby.py  greenhouse.py  lever.py  usajobs.py
tools/ats-ingest/src/skillsimm_ats_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/ats-ingest/tests/: test_ats_ingest.py
(+12 files in other folders)
