[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillsimm-ats-ingest"
version = "0.1.0"
description = "Fetch and filter live job postings from public ATS boards (Greenhouse, Lever, Ashby) — no API keys, no scraping."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.scripts]
ats-ingest = "ats_ingest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ats_ingest = ["data/*.json"]
